# ontoprog

./: .gitremotes  README.md
cpp/: CMakeLists.txt  main.cpp
python/: ontoprog.py
